# binary-tranfer-web-socket

./: CMakeLists.txt  README.md  client.cpp  easywsclient.cpp  image_encode.cpp  image_encode.h  index.html  package.json  server.js
engine/: CMakeLists.txt  client.cpp  easywsclient.hpp  image_encode.cpp  image_encode.h
server/: package.json  server.js
web_client/: client.js  index.html  style.css
